# GA-NN-toolbox

./: .gitignore  Doxyfile  README.md
doc/: main.dox
include/toolbox/data_structures/: array.h  array_float.h  chromosome.h  matrix.h
include/toolbox/data_structures/array_wrappers/: array_float.h
lib/ds_core/: CMakeLists.txt
lib/ds_core/include/src/: ds_array.h
lib/ds_core/src/core/: ds_array.c
src/toolbox/data_structures/: array.c  array_float.c  chromosome.c  matrix.c
src/toolbox/data_structures/array_wrappers/: array_float.c
test/tests/data_structures/: CMakeLists.txt  test_array.c  test_matrices.c
